# nba-stats-tracking

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yaml
docs/: conf.py  index.rst
docs/source/: models.rst  modules.rst  quickstart.rst
nba_stats_tracking/: __init__.py  helpers.py  matchups.py  tracking.py  tracking_shots.py  utils.py
nba_stats_tracking/models/: __init__.py  request.py
nba_stats_tracking/models/boxscore/: __init__.py  boxscore.py  request.py
nba_stats_tracking/models/matchups/: __init__.py  matchups.py  request.py
nba_stats_tracking/models/scoreboard/: __init__.py  request.py  scoreboard.py
nba_stats_tracking/models/tracking/: __init__.py  catch_and_shoot.py  defense.py  drives.py  efficiency.py  elbow_touches.py  paint_touches.py  passing.py  possessions.py  post_touches.py  pull_up.py  rebounding.py  request.py  speed_distance.py
nba_stats_tracking/models/tracking_shots/: __init__.py  request.py  tracking_shots.py
tests/: test_helpers.py  test_matchups.py  test_tracking.py  test_tracking_shots.py  test_utils.py
tests/data/: player_2020_speed_distance_response.json  player_catch_shoot_date_filter.json  player_late_clock_response.json  player_overall_response.json  player_overall_response_for_date.json  player_wide_open_catch_and_shoot_response.json  player_wide_open_single_date_response.json  team_2020_catch_and_shoot_response.json  team_wide_open_response.json
tests/data/game/boxscore/: 0021900740.json
tests/data/scoreboard/: response.json
(+46 files in other folders)
