[tool.black]
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env

    # The following are specific to Black, you probably don't want those.
    | blib2to3
    | tests/data
)/
'''

[tool.isort]
profile = "black"

[tool.poetry]
name = "nba_stats_tracking"
version = "1.0.8"
description = "A package to work with NBA player tracking stats using the NBA Stats API"
authors = ["dblackrun <darryl.blackport@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
pydantic = "^1.9.0"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
responses = "^0.18.0"
furl = "^2.1.3"
black = "^22.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
Sphinx = "^4.4.0"
sphinx-autodoc-typehints = "^1.17.0"
sphinx-rtd-theme = "^1.0.0"
pre-commit = "^2.17.0"
tox = "^3.24.5"
tox-gh-actions = "^2.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
